--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.8.1",
     "pinia": "^2.1.7",
+    "sqlite3": "^5.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
@@ -35,6 +36,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.8",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
