--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "gotify_gui",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
-  "main": "main.js",
+  "main": "dist-electron/index.js",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -12,7 +11,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "start": "electron ."
+    "electron:build": "vite build && electron-builder"
+
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -32,6 +32,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "electron": "^32.0.1",
+    "electron-builder": "^24.13.3",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
@@ -39,6 +40,8 @@
     "sass": "^1.77.8",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vite-electron-plugin": "^0.8.3",
+    "vite-plugin-electron-renderer": "^0.14.5",
     "vue-tsc": "^2.0.21"
   }
 }
