--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "electron:build": "vite build && electron-builder"
-
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -20,7 +19,8 @@
     "pinia": "^2.1.7",
     "sqlite3": "^5.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
