--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "electron:build": "vite build && electron-builder"
+    "electron:build": "vite build && electron-builder",
+    "buildapp": "vite build && electron-builder -w"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -43,5 +44,36 @@
     "vite-electron-plugin": "^0.8.3",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vue-tsc": "^2.0.21"
+  },
+  "build": {
+    "appId": "app.desktop",
+    "productName": "app",
+    "asar": true,
+    "copyright": "Copyright © 2022 electron",
+    "directories": {
+      "buildResources": "assets",
+      "output": "release/"
+    },
+    "files": [
+      "dist-electron/**/*",
+      "dist/**/*"
+    ],
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "artifactName": "${productName}_${version}.${ext}"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": true,
+      "deleteAppDataOnUninstall": false
+    }
   }
 }
